Replace assertion with a comment explaining why we need to null-check the result of |nsIDOMHTMLDocument::GetBody|.  b=119351  r=kin  sr=waterson